--- a/blackhole.yml
+++ b/blackhole.yml
@@ -23,7 +23,7 @@ blackhole:
     zone_file: /etc/unbound/blackhole.zone
     # {domain} will be replaced by the blackholed domain, do not change it here
     zone_data: 'local-zone: "{domain}" always_nxdomain' # For unbound
-    # zone_data: '{domain}=127.0.0.2:6666' # For PowerDNS recursor
+    # zone_data: '{domain}=' # For PowerDNS recursor
     # zone_data: 'server=/{domain}/' # For Dnsmasq
     blackhole_lists: *bh_lists
 
